log
Sat 30 Mar 2024 12:56:33 AM UTC: 
 tests:  0|6
total_score: 0/70
2c61d39
Sat 30 Mar 2024 01:01:19 AM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
1b59e87
Sat 30 Mar 2024 01:01:34 AM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
1318fed
Sat 30 Mar 2024 01:01:53 AM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
2376218
Sat 30 Mar 2024 01:02:42 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b4fd4b2
Sat 30 Mar 2024 01:03:04 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3135284
Sat 30 Mar 2024 01:03:14 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:22: error: ‘list->head’ is a pointer; did you mean to use ‘->’?
   41 |     return list->head.data;
      |                      ^
      |                      ->
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
91891ab
Sat 30 Mar 2024 01:03:23 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3b0bb4d
